--- a/.github/workflows/zap-scan.yaml
+++ b/.github/workflows/zap-scan.yaml
@@ -11,4 +11,4 @@ jobs:
         - name: ZAP Scan
           uses: zaproxy/action-full-scan@v0.10.0
           with:
-            target: 'https://www.zaproxy.org/'
+            target: 'https://btngaming.com'
