--- a/.github/workflows/zap-scan.yaml
+++ b/.github/workflows/zap-scan.yaml
@@ -9,6 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - name: ZAP Scan
-          uses: zaproxy/action-full-scan@v0.10.0
+          uses: zaproxy/action-baseline@v0.12.0
           with:
             target: 'https://btngaming.com'
