--- a/.github/workflows/zap-scan.yaml
+++ b/.github/workflows/zap-scan.yaml
@@ -1,14 +1,21 @@
-name: ZAP Scan
-
-on:
-  workflow_dispatch:
+on: [push]
 
 jobs:
-  build:
-    name: PEN test
+  zap_scan:
     runs-on: ubuntu-latest
+    name: Scan the webapplication
     steps:
-        - name: ZAP Scan
-          uses: zaproxy/action-baseline@v0.12.0
-          with:
-            target: 'https://btngaming.com'
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          ref: master
+      - name: ZAP Scan
+        uses: zaproxy/action-baseline@v0.12.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
+          target: 'https://www.zaproxy.org'
+          rules_file_name: '.zap/rules.tsv'
+          cmd_options: '-a'
+          allow_issue_writing: "false"
+          
