--- a/.github/workflows/zap-scan.yaml
+++ b/.github/workflows/zap-scan.yaml
@@ -20,20 +20,24 @@ jobs:
           cmd_options: '-a'
           allow_issue_writing: "false"
           fail_action: "false"
-          report_file: 'zap_scan_report.html'
+          report_file: 'zap_scan_report_${{ github.sha }}.html'
 
-      - name: Upload ZAP Scan Report
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: zap-scan-report
-          path: zap_scan_report.html
-
+      - name: Check for High, Medium, Low Alerts
+        id: check-alerts
+        run: |
+          # Extract the relevant data from the ZAP report
+          grep -iE 'High|Medium|Low' zap_scan_report_${{ github.sha }}.html > alerts.txt || true
+          if [ -s alerts.txt ]; then
+            echo "RISK_LEVELS_PRESENT=true" >> $GITHUB_ENV
+          else
+            echo "RISK_LEVELS_PRESENT=false" >> $GITHUB_ENV
+          fi
+          
       - name: Send ZAP Scan Results
-        if: steps.zap-scan.outcome == 'success'
+        if: env.RISK_LEVELS_PRESENT == 'true'
         uses: teknatha136/actions-google-chat-text-message@main
         with:
           text-message: |
-            ZAP Scan Report:
-            [Download ZAP Scan Report](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
+            ZAP Scan Report detected High, Medium, or Low risk levels.
+            [View Artifacts](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
           google-chat-webhook: ${{ secrets.CHAT_WEBHOOK }}
