--- a/.github/workflows/zap-scan.yaml
+++ b/.github/workflows/zap-scan.yaml
@@ -26,7 +26,7 @@ jobs:
         id: check-alerts
         run: |
           # Extract the relevant data from the ZAP report
-          grep -iE 'High|Medium|Low' report_html.html > alerts.txt || true
+          grep -a -iE 'High|Medium|Low' report_html.html > alerts.txt || true
           if [ -s alerts.txt ]; then
             echo "RISK_LEVELS_PRESENT=true" >> $GITHUB_ENV
           else
