--- a/.github/workflows/zap-scan.yaml
+++ b/.github/workflows/zap-scan.yaml
@@ -25,19 +25,43 @@ jobs:
       - name: Check for High, Medium, Low Alerts
         id: check-alerts
         run: |
-          # Extract the relevant data from the ZAP report
-          grep -a -iE 'High|Medium|Low' report_html.html > alerts.txt || true
-          if [ -s alerts.txt ]; then
-            echo "RISK_LEVELS_PRESENT=true" >> $GITHUB_ENV
-          else
-            echo "RISK_LEVELS_PRESENT=false" >> $GITHUB_ENV
-          fi
-          
+            # Ensure the ZAP scan report is present
+            if [ -f "report_html.html" ]; then
+              # Extract the relevant alert counts from the HTML report
+              high_alerts=$(grep -A1 "High" report_html.html | awk -F'[<>]' '/<div>/{print $3}')
+              medium_alerts=$(grep -A1 "Medium" report_html.html | awk -F'[<>]' '/<div>/{print $3}')
+              low_alerts=$(grep -A1 "Low" report_html.html | awk -F'[<>]' '/<div>/{print $3}')
+  
+              # Set default values if the variables are empty
+              high_alerts=${high_alerts:-0}
+              medium_alerts=${medium_alerts:-0}
+              low_alerts=${low_alerts:-0}
+  
+              # Output the counts for use in the next step
+              echo "HIGH_ALERTS=${high_alerts}" >> $GITHUB_ENV
+              echo "MEDIUM_ALERTS=${medium_alerts}" >> $GITHUB_ENV
+              echo "LOW_ALERTS=${low_alerts}" >> $GITHUB_ENV
+  
+              # Determine if any alerts are present
+              if [ "$high_alerts" -gt 0 ] || [ "$medium_alerts" -gt 0 ] || [ "$low_alerts" -gt 0 ]; then
+                echo "RISK_LEVELS_PRESENT=true" >> $GITHUB_ENV
+              else
+                echo "RISK_LEVELS_PRESENT=false" >> $GITHUB_ENV
+              fi
+            else
+              echo "RISK_LEVELS_PRESENT=false" >> $GITHUB_ENV
+              echo "No ZAP scan report found."
+            fi
+  
       - name: Send ZAP Scan Results
         if: env.RISK_LEVELS_PRESENT == 'true'
         uses: teknatha136/actions-google-chat-text-message@main
         with:
           text-message: |
-            ZAP Scan Report detected High, Medium, or Low risk levels.
+            ZAP Scan Report Summary:
+            - High: ${{ env.HIGH_ALERTS }}
+            - Medium: ${{ env.MEDIUM_ALERTS }}
+            - Low: ${{ env.LOW_ALERTS }}
+  
             [View Artifacts](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
           google-chat-webhook: ${{ secrets.CHAT_WEBHOOK }}
