--- a/.github/workflows/zap-scan.yaml
+++ b/.github/workflows/zap-scan.yaml
@@ -9,64 +9,49 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: master
+
       - name: ZAP Scan
-        id: 'zap-scan'
+        id: zap-scan
         uses: zaproxy/action-baseline@v0.12.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'https://gstorebhutan.company.site'
+          target: 'https://ser-server1.apps.selise.tech'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
           allow_issue_writing: "false"
           fail_action: "false"
-          report_file: 'report_html.html'
+          report_file: 'report_html.html'  # Save report to this file
+
+      - name: List Files for Debugging
+        run: ls -alh
 
       - name: Check for High, Medium, Low Alerts
         id: check-alerts
         run: |
-            # Ensure the ZAP scan report is present
-            if [ -f "report_html.html" ]; then
-              # Extract the relevant alert counts from the HTML report
-              high_alerts=$(grep -a -A1 "High" report_html.html | grep -oP '(?<=<div>)[0-9]+(?=</div>)')
-              medium_alerts=$(grep -a -A1 "Medium" report_html.html | grep -oP '(?<=<div>)[0-9]+(?=</div>)')
-              low_alerts=$(grep -a -A1 "Low" report_html.html | grep -oP '(?<=<div>)[0-9]+(?=</div>)')
-  
-              # Default values if the variables are empty
-              high_alerts=${high_alerts:-0}
-              medium_alerts=${medium_alerts:-0}
-              low_alerts=${low_alerts:-0}
-  
-              # Ensure all values are integers
-              if ! [[ "$high_alerts" =~ ^[0-9]+$ ]]; then high_alerts=0; fi
-              if ! [[ "$medium_alerts" =~ ^[0-9]+$ ]]; then medium_alerts=0; fi
-              if ! [[ "$low_alerts" =~ ^[0-9]+$ ]]; then low_alerts=0; fi
-  
-              # Output the counts for use in the next step
-              echo "HIGH_ALERTS=${high_alerts}" >> $GITHUB_ENV
-              echo "MEDIUM_ALERTS=${medium_alerts}" >> $GITHUB_ENV
-              echo "LOW_ALERTS=${low_alerts}" >> $GITHUB_ENV
-  
-              # Determine if any alerts are present
-              if [ "$high_alerts" -gt 0 ] || [ "$medium_alerts" -gt 0 ] || [ "$low_alerts" -gt 0 ]; then
-                echo "RISK_LEVELS_PRESENT=true" >> $GITHUB_ENV
-              else
-                echo "RISK_LEVELS_PRESENT=false" >> $GITHUB_ENV
-              fi
+          # Ensure the ZAP scan report is present
+          if [ -f "report_html.html" ]; then
+            # Extract the relevant alert counts from the HTML report
+            high_alerts=$(grep -a -C7 "## Summary of Alerts" report_md.md | grep "High" | awk '{print $4}')
+            medium_alerts=$(grep -a -C7 "## Summary of Alerts" report_md.md | grep "Medium" | awk '{print $4}')
+            low_alerts=$(grep -a -C7 "## Summary of Alerts" report_md.md | grep "Low" | awk '{print $4}')
+
+            # Determine if any alerts are present
+            if [ "$high_alerts" -gt 0 ] || [ "$medium_alerts" -gt 0 ] || [ "$low_alerts" -gt 0 ]; then
+              echo "RISK_LEVELS_PRESENT=true" >> $GITHUB_ENV
             else
               echo "RISK_LEVELS_PRESENT=false" >> $GITHUB_ENV
-              echo "No ZAP scan report found."
             fi
-  
+          else
+            echo "RISK_LEVELS_PRESENT=false" >> $GITHUB_ENV
+            echo "No ZAP scan report found."
+          fi
+
       - name: Send ZAP Scan Results
         if: env.RISK_LEVELS_PRESENT == 'true'
         uses: teknatha136/actions-google-chat-text-message@main
         with:
           text-message: |
-            ZAP Scan Report Summary:
-            - High: ${{ env.HIGH_ALERTS }}
-            - Medium: ${{ env.MEDIUM_ALERTS }}
-            - Low: ${{ env.LOW_ALERTS }}
-  
+            ZAP Scan Report detected High, Medium, or Low risk levels.
             [View Artifacts](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
           google-chat-webhook: ${{ secrets.CHAT_WEBHOOK }}
