--- a/.github/workflows/zap-scan.yaml
+++ b/.github/workflows/zap-scan.yaml
@@ -16,12 +16,15 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'https://ser-server1.apps.selise.tech'
+          target: 'https://gstorebhutan.company.site'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
           allow_issue_writing: "false"
           fail_action: "false"
           report_file: 'report_html.html'  # Save report to this file
+
+      - name: List Files for Debugging
+        run: ls -alh
 
       - name: Check for High, Medium, Low Alerts
         id: check-alerts
