--- a/.github/workflows/zap-scan.yaml
+++ b/.github/workflows/zap-scan.yaml
@@ -37,6 +37,7 @@ jobs:
             echo "MEDIUM_ALERTS=${medium_alerts}" >> $GITHUB_ENV
             echo "LOW_ALERTS=${low_alerts}" >> $GITHUB_ENV
 
+            # Determine if any alerts are present
             if [ "$high_alerts" -gt 0 ] || [ "$medium_alerts" -gt 0 ] || [ "$low_alerts" -gt 0 ]; then
               echo "RISK_LEVELS_PRESENT=true" >> $GITHUB_ENV
             else
@@ -46,6 +47,11 @@ jobs:
             echo "RISK_LEVELS_PRESENT=false" >> $GITHUB_ENV
             echo "No ZAP scan report found."
           fi
+
+      # - name: Rsync
+      #   run: |
+      #       mkdir zap_report && cp report_html.html zap_report/. && mv zap_report/report_html.html zap_report/report_${{ github.sha }}.html
+      #       rsync -avz ./zap_report/report_${{ github.sha }}.html ${{ secrets.webserver}}:/home/ubuntu/files/
 
       - name: Send ZAP Scan Results
         if: env.RISK_LEVELS_PRESENT == 'true'
