update: send email function

--- a/.github/workflows/zap-scan.yaml
+++ b/.github/workflows/zap-scan.yaml
@@ -5,7 +5,11 @@ on:
       url:
         description: 'Enter URL'
         required: true
-        default: 'https://example.com'
+        
+      email:
+        description: 'Enter Your Email'
+        required: true
+
 jobs:
   zap_scan:
     runs-on: ubuntu-latest
@@ -29,49 +33,53 @@ jobs:
           fail_action: "false"
           report_file: 'report_html.html'  # Save report to this file
 
-      # - name: Check for High, Medium, Low Alerts
-      #   id: check-alerts
-      #   run: |
-      #     # Ensure the ZAP scan report is present
-      #     if [ -f "report_html.html" ]; then
-      #       # Extract the relevant alert counts from the HTML report
-      #       high_alerts=$(grep -a -C7 "## Summary of Alerts" report_md.md | grep "High" | awk '{print $4}')
-      #       medium_alerts=$(grep -a -C7 "## Summary of Alerts" report_md.md | grep "Medium" | awk '{print $4}')
-      #       low_alerts=$(grep -a -C7 "## Summary of Alerts" report_md.md | grep "Low" | awk '{print $4}')
+      - name: Check for High, Medium, Low Alerts
+        id: check-alerts
+        run: |
+           # Ensure the ZAP scan report is present
+           if [ -f "report_html.html" ]; then
+             # Extract the relevant alert counts from the HTML report
+             high_alerts=$(grep -a -C7 "## Summary of Alerts" report_md.md | grep "High" | awk '{print $4}')
+             medium_alerts=$(grep -a -C7 "## Summary of Alerts" report_md.md | grep "Medium" | awk '{print $4}')
+             low_alerts=$(grep -a -C7 "## Summary of Alerts" report_md.md | grep "Low" | awk '{print $4}')
 
-      #       echo "HIGH_ALERTS=${high_alerts}" >> $GITHUB_ENV
-      #       echo "MEDIUM_ALERTS=${medium_alerts}" >> $GITHUB_ENV
-      #       echo "LOW_ALERTS=${low_alerts}" >> $GITHUB_ENV
+             echo "HIGH_ALERTS=${high_alerts}" >> $GITHUB_ENV
+             echo "MEDIUM_ALERTS=${medium_alerts}" >> $GITHUB_ENV
+             echo "LOW_ALERTS=${low_alerts}" >> $GITHUB_ENV
 
-      #       # Determine if any alerts are present
-      #       if [ "$high_alerts" -gt 0 ] || [ "$medium_alerts" -gt 0 ] || [ "$low_alerts" -gt 0 ]; then
-      #         echo "RISK_LEVELS_PRESENT=true" >> $GITHUB_ENV
-      #       else
-      #         echo "RISK_LEVELS_PRESENT=false" >> $GITHUB_ENV
-      #       fi
-      #     else
-      #       echo "RISK_LEVELS_PRESENT=false" >> $GITHUB_ENV
-      #       echo "No ZAP scan report found."
-      #     fi
+             # Determine if any alerts are present
+             if [ "$high_alerts" -gt 0 ] || [ "$medium_alerts" -gt 0 ] || [ "$low_alerts" -gt 0 ]; then
+               echo "RISK_LEVELS_PRESENT=true" >> $GITHUB_ENV
+             else
+               echo "RISK_LEVELS_PRESENT=false" >> $GITHUB_ENV
+             fi
+           else
+             echo "RISK_LEVELS_PRESENT=false" >> $GITHUB_ENV
+             echo "No ZAP scan report found."
+           fi
 
       # - name: Rsync
       #   run: |
       #       mkdir zap_report && cp report_html.html zap_report/. && mv zap_report/report_html.html zap_report/report_${{ github.sha }}.html
       #       rsync -avz ./zap_report/report_${{ github.sha }}.html ${{ secrets.webserver}}:/home/ubuntu/files/
 
-      # - name: Send ZAP Scan Results
-      #   if: env.RISK_LEVELS_PRESENT == 'true'
-      #   uses: teknatha136/actions-google-chat-text-message@main
-      #   with:
-      #     text-message: |
-      #         ## ZAP Scan Report Summary
+      - name: SendEmail 
+        uses: namgaytobden/MailEase@master
+        with:
+          fromEmail: ${{ secrets.FROM_EMAIL }}
+          fromName: ${{ secrets.FROM_NAME }}
+          smtpUrl: ${{ secrets.SMTP_URL }}
+          smtpPass: ${{ secrets.SMTP_PASS }}
+          toEmail: ${{ github.event.inputs.email }}
+          subject: PEN TEST RESULTS
+          mail: |
+               ## ZAP Scan Report Summary
 
-      #         | **Severity** | **Alerts** |
-      #         |--------------|------------|
-      #         | High         | ${{ env.HIGH_ALERTS }} |
-      #         | Medium       | ${{ env.MEDIUM_ALERTS }} |
-      #         | Low          | ${{ env.LOW_ALERTS }} |
+               | **Severity** | **Alerts** |
+               |--------------|------------|
+               | High         | ${{ env.HIGH_ALERTS }} |
+               | Medium       | ${{ env.MEDIUM_ALERTS }} |
+               | Low          | ${{ env.LOW_ALERTS }} |
 
-      #         [View Artifacts](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
+               [View Artifacts](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
 
-      #     google-chat-webhook: ${{ secrets.CHAT_WEBHOOK }}
