--- a/.github/workflows/zap-scan.yaml
+++ b/.github/workflows/zap-scan.yaml
@@ -72,6 +72,7 @@ jobs:
           smtpPass: ${{ secrets.SMTP_PASS }}
           toEmail: ${{ github.event.inputs.email }}
           subject: PEN TEST RESULTS
+          attachment: 'report_html.html'
           mail: |
                ## ZAP Scan Report Summary
 
